--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,17 @@
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
-<p> <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<p> <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<h2 id="bib-year-2021">2021</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Bernhard Feiten, and Alexander Raake. <b>"Modular Framework and Instances of Pixel-based Video Quality Models for UHD-1/4K." </b><i>IEEE Access</i>. 
+         vol.&#160;9.
+    2021.
+    
+         pp.&#160;25.
+    
+        &#160;<a href="https://ieeexplore.ieee.org/document/9355144">[url]</a>
+        &#160;<a href="./bibs/goering2021pixel.bib" target="_blank">[bib]</a></p>
+</p>
 <h2 id="bib-year-2020">2020</h2><p  class="bibentries-one-year">
   <p class="bibentry">Alexander Raake, Silvio Borer, Shahid Satti, J&#246;rgen Gustafsson, Rakesh Rao Ramachandra Rao, Stefano Medagli, Peter List, Steve G&#246;ring, David Lindero, Werner Robitza, Gunnar Heikkil&#228;, Simon Broom, Christian Schmidmer, Bernhard Feiten, Ulf W&#252;stenhagen, Thomas Wittmann, Matthias Obermann, and Roland Bitto. <b>"Multi-model standard for bitstream-, pixel-based and hybrid video quality assessment of UHD/4K: ITU-T P.1204." </b><i>IEEE Access</i>. 
          vol.&#160;8.
