--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="documents.html">documents</a> | <a href="photos.html">photos</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
 
         </section>
         <hr>
@@ -99,6 +99,11 @@
     
         &#160;<a href="https://ieeexplore.ieee.org/document/9355144">[url]</a>
         &#160;<a href="./bibs/goering2021pixel.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
+  <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Enhancement of Pixel-based Video Quality Models using Meta-data." </b>2021.
+    
+        &#160;<a href="./bibs/rao2021meta.bib" target="_blank">[bib]</a></p>
 </p>
 <h2 id="bib-year-2020">2020</h2><p  class="bibentries-one-year">
   <p class="bibentry">Alexander Raake, Silvio Borer, Shahid Satti, J&#246;rgen Gustafsson, Rakesh Rao Ramachandra Rao, Stefano Medagli, Peter List, Steve G&#246;ring, David Lindero, Werner Robitza, Gunnar Heikkil&#228;, Simon Broom, Christian Schmidmer, Bernhard Feiten, Ulf W&#252;stenhagen, Thomas Wittmann, Matthias Obermann, and Roland Bitto. <b>"Multi-model standard for bitstream-, pixel-based and hybrid video quality assessment of UHD/4K: ITU-T P.1204." </b><i>IEEE Access</i>. 
