--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
@@ -91,6 +91,11 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2021">2021</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Singla, Ashutosh, G&#246;ring, Steve, Keller, Dominik, Rao, Rakesh Rao Ramachandra, Fremerey, Stephan, and Raake, Alexander. <b>"Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos." </b><i>IEEE Virtual Reality and 3D User Interfaces (VR)</i>. 2021.
+    
+        &#160;<a href="./bibs/singla2021.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Bernhard Feiten, and Alexander Raake. <b>"Modular Framework and Instances of Pixel-based Video Quality Models for UHD-1/4K." </b><i>IEEE Access</i>. 
          vol.&#160;9.
     2021.
