--- a/publications.html
+++ b/publications.html
@@ -93,6 +93,7 @@
 <h2 id="bib-year-2021">2021</h2><p  class="bibentries-one-year">
   <p class="bibentry">Singla, Ashutosh, G&#246;ring, Steve, Keller, Dominik, Rao, Rakesh Rao Ramachandra, Fremerey, Stephan, and Raake, Alexander. <b>"Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos." </b><i>IEEE Virtual Reality and 3D User Interfaces (VR)</i>. 2021.
     
+        &#160;<a href="https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf">[url]</a>
         &#160;<a href="./bibs/singla2021.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
