--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,8 @@
          pp.&#160;31842-31864.
     
         &#160;<a href="https://ieeexplore.ieee.org/document/9355144">[url]</a>
-        &#160;<a href="./bibs/goering2021pixel.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/goering2021pixel.bib" target="_blank">[bib]</a>
+        &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/pixelmodels" target="_blank">[code]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Enhancement of Pixel-based Video Quality Models using Meta-data." </b>2021.
