--- a/publications.html
+++ b/publications.html
@@ -182,7 +182,8 @@
     May&#160;2020.
     
         &#160;<a href="https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation">[url]</a>
-        &#160;<a href="./bibs/rao2020p1204.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/rao2020p1204.bib" target="_blank">[bib]</a>
+        &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/bitstream_mode3_p1204_3" target="_blank">[code]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Werner Robitza, Alexander M. Dethof, Steve G&#246;ring, Alexander Raake, Tim Polzehl, and Andre Beyer. <b>"Are You Still Watching? Streaming Video Quality and Engagement Assessment in the Crowd." </b><i>Twelfth International Conference on Quality of Multimedia Experience (QoMEX)</i>. Athlone, Ireland.
@@ -207,7 +208,8 @@
          pp.&#160;1-8.
     
         &#160;<a href="https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1">[url]</a>
-        &#160;<a href="./bibs/rao2019Db.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/rao2019Db.bib" target="_blank">[bib]</a>
+        &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/AVT-VQDB-UHD-1" target="_blank">[code]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Alexander Raake. <b>"Evaluation of Intra-coding based image compression." </b><i>8th European Workshop on Visual Information Processing (EUVIP),</i>. IEEE.
