--- a/publications.html
+++ b/publications.html
@@ -364,7 +364,7 @@
 <h2 id="bib-year-2015">2015</h2><p  class="bibentries-one-year">
   <p class="bibentry">Martin Potthast, Steve G&#246;ring, Paolo Rosso, and Benno Stein. <b>"Towards Data Submissions for Shared Tasks: First Experiences for the Task of Text Alignment." </b><i>Working Notes Papers of the CLEF 2015 Evaluation Labs</i>. 09&#160;2015.
     
-        &#160;<a href="http://www.clef-initiative.eu/publication/working-notes">[url]</a>
+        &#160;<a href="http://ceur-ws.org/Vol-1391/inv-pap11-CR.pdf">[url]</a>
         &#160;<a href="./pdfs/2015/pan-text-alignment.pdf" target="_blank">[pdf]</a>
         &#160;<a href="./bibs/pan2015.bib" target="_blank">[bib]</a></p>
 </p>
