--- a/publications.html
+++ b/publications.html
@@ -123,7 +123,7 @@
         &#160;<a href="./bibs/robitza2021siti.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Singla, Ashutosh, G&#246;ring, Steve, Keller, Dominik, Rao, Rakesh Rao Ramachandra, Fremerey, Stephan, and Raake, Alexander. <b>"Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos." </b><i>IEEE Virtual Reality and 3D User Interfaces (VR)</i>. 2021.
+  <p class="bibentry">Ashutosh Singla, Steve G&#246;ring, Dominik Keller, Rakesh Rao Ramachandra Rao, Stephan Fremerey, and Alexander Raake. <b>"Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos." </b><i>IEEE Virtual Reality and 3D User Interfaces (VR)</i>. 2021.
     
         &#160;<a href="https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf">[url]</a>
         &#160;<a href="./bibs/singla2021.bib" target="_blank">[bib]</a></p>
