add videos and slides for two of my talks

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ Most of my developed software is publicly available on github.</p>
 <li>email: <a href="mailto:stg7[at]gmx.de">stg7[at]gmx.de</a></li>
 <li>xmpp: stg7[at]jabber.ccc.de</li>
 </ul>
+<p>If you like my software or research you can also <a href="https://ko-fi.com/binarys3v3n">donate me a :coffee:</a>.</p>
 <h2>about</h2>
 <p>This webpage is generated using a small python script + a markdown parser.
 Check <a href="https://github.com/stg7/stg7.github.io">https://github.com/stg7/stg7.github.io</a> for more.</p>
