--- a/publications.html
+++ b/publications.html
@@ -115,6 +115,7 @@
 <p  class="bibentries-one-year">
   <p class="bibentry">Rakesh Rao Ramachandra Rao, Steve G&#246;ring, and Alexander Raake. <b>"Towards High Resolution Video Quality Assessment in the Crowd." </b><i>13th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2021.
     
+        &#160;<a href="https://ieeexplore.ieee.org/document/9465425">[url]</a>
         &#160;<a href="./bibs/rao2021crowdvideo.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
