--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
+        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
@@ -190,7 +190,7 @@
         &#160;<a href="./pdfs/2020/gaming_genre_presentation.pdf" target="_blank">[slides]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Stephan Fremerey, Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rachel Huang, and Alexander Raake. <b>"Subjective Test Dataset and Meta-data-based Models for 360$^\circ$ Streaming Video Quality." </b><i>2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)</i>. IEEE.
+  <p class="bibentry">Stephan Fremerey, Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rachel Huang, and Alexander Raake. <b>"Subjective Test Dataset and Meta-data-based Models for 360&deg; Streaming Video Quality." </b><i>2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)</i>. IEEE.
     2020.
     
          pp.&#160;1--6.
