--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,16 @@
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
-<p> <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<p> <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<h2 id="bib-year-2022">2022</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Robitza, Werner, Ramachandra-Rao, Rakesh Rao, G&#246;ring, Steve, Dethof, Alexander, and Raake, Alexander. <b>"Deploying the ITU-T P.1203 QoE Model in the Wild and Retraining for New Codecs." </b><i>Proceedings of the 1st Conference on Mile-High Video</i>. New York, NY, USA.
+    2022.
+    
+         pp.&#160;121&#8211;122.
+    
+        &#160;<a href="https://doi.org/10.1145/3510450.3517310">[url]</a>
+        &#160;<a href="./bibs/robitza2022.bib" target="_blank">[bib]</a></p>
+</p>
 <h2 id="bib-year-2021">2021</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Stephan Fremerey, and Alexander Raake. <b>"AVRate Voyager: an open source online testing platform." </b><i>2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)</i>. IEEE.
     2021.
