further update the html files

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html"><em>start</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html">publications</a></p>
+        <p><a href="index.html"><em>start</em></a> | <a href="publications.html">publications</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
 
         </section>
         <hr>
@@ -101,8 +101,13 @@ Most of my developed software is publicly available on github.</p>
 <ul>
 <li><a href="http://stg7.github.io/phrasit/" target="_blank">PhrasIt</a> -- an experimental ngram search engine</li>
 <li><a href="http://github.com/stg7/ctag/" target="_blank">ctag</a> -- a generator for cloud tags</li>
-<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/avrateNG" target="_blank">AVRateNG</a> -- a software framework for conducting subjective video tests</li>
-<li><a href="https://telecommunication-telemedia-assessment.github.io/p1203/" target="_blank">ITU P.1203</a> -- reference implementation and extensions of P.1203</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/avrateNG" target="_blank">AVRateNG</a> -- a software framework for conducting subjective video tests in the lab</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager" target="_blank">AVrateVoyager</a> -- a software framework for conducting subjective video tests online</li>
+<li><a href="https://telecommunication-telemedia-assessment.github.io/p1203/" target="_blank">ITU-T P.1203</a> -- reference implementation and extensions of P.1203</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/bitstream_mode3_p1204_3" target="_blank">ITU-T P.1204.3</a> -- reference implementation of P.1204.3</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/pixelmodels" target="_blank">pixelmodels</a> -- no-reference, full-reference and hybrid video quality models up to UHD-1/4K resolution</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/quat" target="_blank">quat</a> -- collection of python methods and tools as a libary for video/image quality analysis</li>
+<li><a href="https://github.com/Telecommunication-Telemedia-Assessment/AVT-VQDB-UHD-1" target="_blank">AVT-VQDB-UHD-1</a> --  publicly shared video quality dataset for UHD-1/4K</li>
 <li><a href="https://bitbucket.org/stg7/" target="_blank">bitbucket</a> -- my bitbucket page</li>
 <li><a href="https://gist.github.com/stg7" target="_blank">my gists</a> -- my gists on github</li>
 </ul>
@@ -115,7 +120,7 @@ Most of my developed software is publicly available on github.</p>
 <li>email: <a href="mailto:stg7[at]gmx.de">stg7[at]gmx.de</a></li>
 <li>xmpp: stg7[at]jabber.ccc.de</li>
 </ul>
-<p>If you like my software or research you can also <a href="https://ko-fi.com/binarys3v3n">donate me a :coffee:</a>.</p>
+<p>If you like my software or research you can also <a href="https://ko-fi.com/binarys3v3n">donate me a ☕</a>.</p>
 <h2>about</h2>
 <p>This webpage is generated using a small python script + a markdown parser.
 Check <a href="https://github.com/stg7/stg7.github.io">https://github.com/stg7/stg7.github.io</a> for more.</p>
