--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,13 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2022">2022</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring. <b>"Data-Driven Visual Quality Estimation Using Machine Learning." </b>05&#160;2022.
+    PhD thesis, soon to be published.
+    
+        &#160;<a href="./bibs/phd_thesis_2021_22.bib" target="_blank">[bib]</a>
+        &#160;<a href="./pdfs/2022/phd_presentation.pdf" target="_blank">[slides]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Robitza, Werner, Ramachandra-Rao, Rakesh Rao, G&#246;ring, Steve, Dethof, Alexander, and Raake, Alexander. <b>"Deploying the ITU-T P.1203 QoE Model in the Wild and Retraining for New Codecs." </b><i>Proceedings of the 1st Conference on Mile-High Video</i>. New York, NY, USA.
     2022.
     
