--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
     <hr>
     <div class="maincontent">
         <section id="toc" class="container theme-showcase">
-        <p><a href="index.html">start</a> | <a href="publications.html"><em>publications</em></a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a></p>
+        <p><a href="index.html">start</a> | <a href="photos.html">photos</a> | <a href="documents.html">documents</a> | <a href="publications.html"><em>publications</em></a></p>
 
         </section>
         <hr>
@@ -92,8 +92,8 @@
 <p> <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2022">2022</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Data-Driven Visual Quality Estimation Using Machine Learning." </b>05&#160;2022.
-    PhD thesis, soon to be published.
-    
+    PhD thesis, 
+        &#160;<a href="https://doi.org/10.22032/dbt.52210">[url]</a>
         &#160;<a href="./bibs/phd_thesis_2021_22.bib" target="_blank">[bib]</a>
         &#160;<a href="./pdfs/2022/phd_presentation.pdf" target="_blank">[slides]</a></p>
 </p>
