--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,16 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2022">2022</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Ramachandra Rao, Rakesh Rao, G&#246;ring, Steve, and Raake, Alexander. <b>"AVQBits--Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications." </b><i>IEEE Access</i>. 
+         vol.&#160;10.
+    2022.
+    
+         pp.&#160;80321-80351.
+    
+        &#160;<a href="https://ieeexplore.ieee.org/document/9846967">[url]</a>
+        &#160;<a href="./bibs/rao2022avqbits.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring. <b>"Data-Driven Visual Quality Estimation Using Machine Learning." </b>05&#160;2022.
     PhD thesis, 
         &#160;<a href="https://doi.org/10.22032/dbt.52210">[url]</a>
