--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2022">2022</h2><p  class="bibentries-one-year">
-  <p class="bibentry">Ramachandra Rao, Rakesh Rao, G&#246;ring, Steve, and Raake, Alexander. <b>"AVQBits--Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications." </b><i>IEEE Access</i>. 
+  <p class="bibentry">Ramachandra Rao, Rakesh Rao, G&#246;ring, Steve, and Raake, Alexander. <b>"AVQBits-Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications." </b><i>IEEE Access</i>. 
          vol.&#160;10.
     2022.
     
