--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,12 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2023" >2023</a>  |  <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"Quality Assessment of Higher Resolution Images and Videos with Remote Testing." </b><i>Quality and User Experience (QUEX)</i>. 2023.
+    to appear.
+    
+        &#160;<a href="./bibs/goeringrao2023crowd.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Eckhard Stoll, Stephan Breide, Steve G&#246;ring, Alexander Raake. <b>"Modelling of an automatic vision mixer with human characteristics for multi-camera theater recordings." </b><i>IEEE Access</i>. 
          vol.&#160;11.
     2023.
