--- a/publications.html
+++ b/publications.html
@@ -95,6 +95,7 @@
          vol.&#160;8.
     2023.
     
+        &#160;<a href="https://link.springer.com/article/10.1007/s41233-023-00055-6">[url]</a>
         &#160;<a href="./bibs/goeringrao2023crowd.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
