--- a/publications.html
+++ b/publications.html
@@ -93,6 +93,7 @@
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rasmus Merten, and Alexander Raake. <b>"Analysis of Appeal for realistic AI-generated Photos." </b>2023.
     
+        &#160;<a href="https://doi.org/10.1109/ACCESS.2023.3267968">[url]</a>
         &#160;<a href="./bibs/goering2023ai.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
