--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,9 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2023" >2023</a>  |  <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rasmus Merten, and Alexander Raake. <b>"Analysis of Appeal for realistic AI-generated Photos." </b>2023.
+  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rasmus Merten, and Alexander Raake. <b>"Analysis of Appeal for realistic AI-generated Photos." </b><i>IEEE Access</i>. 
+         vol.&#160;11.
+    2023.
     
          pp.&#160;38999-39012.
     
