--- a/publications.html
+++ b/publications.html
@@ -89,8 +89,13 @@
         <hr>
         <section class="container theme-showcase" role="main" style="height:80%">
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
-<p> <a href="#bib-year-2023" >2023</a>  |  <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
+<p> <a href="#bib-year-2023" >2023</a>  |  <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  |  <a href="#bib-year-0000" >0000</a>  <br> 
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"Appeal and quality assessment for AI-generated images." </b><i>15th Int. Conference on Quality of Multimedia Experience (QoMEX)</i>. 2023.
+    
+        &#160;<a href="./bibs/goering2023aiquality.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rasmus Merten, and Alexander Raake. <b>"Analysis of Appeal for realistic AI-generated Photos." </b><i>IEEE Access</i>. 
          vol.&#160;11.
     2023.
@@ -495,6 +500,10 @@
         &#160;<a href="./pdfs/2012/ba.pdf" target="_blank">[pdf]</a>
         &#160;<a href="./bibs/ba_2012.bib" target="_blank">[bib]</a>
         &#160;<a href="./pdfs/2012/ba_slides.pdf" target="_blank">[slides]</a></p>
+</p>
+<h2 id="bib-year-0000">0000</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Steve G&#246;ring, Rasmus Merten, and Alexander Raake. <b>"DNN-based Photography Rule Prediction using Photo Tags." </b><i>15th Int. Conference on Quality of Multimedia Experience (QoMEX)</i>. 
+        &#160;<a href="./bibs/goering2023ruleext.bib" target="_blank">[bib]</a></p>
 </p>
 </p>
 
