--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,8 @@
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, and Alexander Raake. <b>"Appeal and quality assessment for AI-generated images." </b><i>15th Int. Conference on Quality of Multimedia Experience (QoMEX)</i>. 2023.
     
-        &#160;<a href="./bibs/goering2023aiquality.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/goering2023aiquality.bib" target="_blank">[bib]</a>
+        &#160;<a href="./pdfs/2023/final_ai_poster.pdf" target="_blank">[poster]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rakesh Rao Ramachandra Rao, Rasmus Merten, and Alexander Raake. <b>"Analysis of Appeal for realistic AI-generated Photos." </b><i>IEEE Access</i>. 
@@ -503,7 +504,8 @@
 </p>
 <h2 id="bib-year-0000">0000</h2><p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rasmus Merten, and Alexander Raake. <b>"DNN-based Photography Rule Prediction using Photo Tags." </b><i>15th Int. Conference on Quality of Multimedia Experience (QoMEX)</i>. 
-        &#160;<a href="./bibs/goering2023ruleext.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/goering2023ruleext.bib" target="_blank">[bib]</a>
+        &#160;<a href="./pdfs/2023/final_rule_poster.pdf" target="_blank">[poster]</a></p>
 </p>
 </p>
 
