--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,7 @@
     
          pp.&#160;69563-69585.
     
+        &#160;<a href="https://doi.org/10.1109/ACCESS.2023.3292588">[url]</a>
         &#160;<a href="./bibs/goering2023imageappeal.bib" target="_blank">[bib]</a>
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal" target="_blank">[code]</a></p>
 </p>
