--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,11 @@
             <p>In the last years I published several papers on conferences or wrote scientific theses/publications (master, bachelor, or some other short texts).</p>
 <p> <a href="#bib-year-2023" >2023</a>  |  <a href="#bib-year-2022" >2022</a>  |  <a href="#bib-year-2021" >2021</a>  |  <a href="#bib-year-2020" >2020</a>  |  <a href="#bib-year-2019" >2019</a>  |  <a href="#bib-year-2018" >2018</a>  |  <a href="#bib-year-2017" >2017</a>  |  <a href="#bib-year-2016" >2016</a>  |  <a href="#bib-year-2015" >2015</a>  |  <a href="#bib-year-2014" >2014</a>  |  <a href="#bib-year-2013" >2013</a>  |  <a href="#bib-year-2012" >2012</a>  <br> 
 <h2 id="bib-year-2023">2023</h2><p  class="bibentries-one-year">
+  <p class="bibentry">Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss&#8224;, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve G&#246;ring, William Menz, Alexander Raake, Wolfgang R&#252;ther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter. <b>"True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G." </b>2023.
+    
+        &#160;<a href="./bibs/friese20236g.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Eckhard Stoll, Stephan Breide, Steve G&#246;ring, Alexander Raake. <b>"Automatic Camera Selection, Shot Size, and Video Editing in Theater Multi-Camera Recordings." </b><i>IEEE Access</i>. 
          vol.&#160;11.
     2023.
