--- a/publications.html
+++ b/publications.html
@@ -97,7 +97,7 @@
         &#160;<a href="./bibs/singla2023point.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss&#8224;, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve G&#246;ring, William Menz, Alexander Raake, Wolfgang R&#252;ther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter. <b>"True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G." </b>2023.
+  <p class="bibentry">Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve G&#246;ring, William Menz, Alexander Raake, Wolfgang R&#252;ther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter. <b>"True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G." </b>2023.
     to appear.
     
         &#160;<a href="./bibs/friese20236g.bib" target="_blank">[bib]</a></p>
