add missing pub

--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,12 @@
         &#160;<a href="./bibs/singla2023point.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
+  <p class="bibentry">Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Hans Schotten, Mandy Galkow-Schneider, Ingo Friese, Tobias Pfandzelter, David Bermbach, Louay Bassbouss and Alexander Zoubarev, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve G&#246;ring, William Menz, Alexander Raake, Wolfgang R&#252;ther-Kindel, abian Quaeck, Nick Stuckert, Robert Vilter. <b>"6G NeXt - Towards 6G Split Computing Network Applications: Use Cases and Architecture." </b>2023.
+    to appear.
+    
+        &#160;<a href="./bibs/melnyk2023-6gnext.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve G&#246;ring, William Menz, Alexander Raake, Wolfgang R&#252;ther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter. <b>"True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G." </b>2023.
     to appear.
     
