--- a/publications.html
+++ b/publications.html
@@ -98,7 +98,7 @@
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/frankenstone" target="_blank">[code]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring and Rakesh Rao Ramachandra Rao. <b>"AVT-VIBE -- OVERVIEW OF TWO MODELS FOR THE ICIP 2024 GRAND CHALLENGE ON VIDEO COMPLEXITY." </b>2024.
+  <p class="bibentry">Steve G&#246;ring and Rakesh Rao Ramachandra Rao. <b>"AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity." </b>2024.
     to appear.
     
         &#160;<a href="./bibs/goeringrao2024videocomplexity.bib" target="_blank">[bib]</a>
