--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,8 @@
   <p class="bibentry">Steve G&#246;ring, Alexander Raake. <b>"The Frankenstone toolbox for video quality analysis of user-generated content.." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
     
         &#160;<a href="./bibs/goering2024frankenstone.bib" target="_blank">[bib]</a>
-        &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/frankenstone" target="_blank">[code]</a></p>
+        &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/frankenstone" target="_blank">[code]</a>
+        &#160;<a href="./pdfs/2024/qomex2024_frankenstone_poster.pdf" target="_blank">[poster]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Rakesh Rao Ramachandra Rao. <b>"AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity." </b>2024.
