add avt-vibe paper

--- a/publications.html
+++ b/publications.html
@@ -110,8 +110,8 @@
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring and Rakesh Rao Ramachandra Rao. <b>"AVT-VIBE -- Overview of two Models for the ICIP 2024 Grand Challenge on Video Complexity." </b>2024.
-    to appear.
     
+        &#160;<a href="./pdfs/2024/avt-vibe-paper.pdf" target="_blank">[pdf]</a>
         &#160;<a href="./bibs/goeringrao2024videocomplexity.bib" target="_blank">[bib]</a>
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/avt_vibe" target="_blank">[code]</a></p>
 </p>
