--- a/publications.html
+++ b/publications.html
@@ -97,12 +97,12 @@
         &#160;<a href="./bibs/conde2024ais.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Felix Immohr, Gareth Rendle, Christian Kehling, Anton Lammert, Steve G&#246;ring, Bernd Froehlich, Alexander Raake. <b>"Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality.." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
+  <p class="bibentry">Felix Immohr, Gareth Rendle, Christian Kehling, Anton Lammert, Steve G&#246;ring, Bernd Froehlich, Alexander Raake. <b>"Subjective Evaluation of the Impact of Spatial Audio on Triadic Communication in Virtual Reality." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
     
         &#160;<a href="./bibs/immohr2024triadic.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">Steve G&#246;ring, Alexander Raake. <b>"The Frankenstone toolbox for video quality analysis of user-generated content.." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
+  <p class="bibentry">Steve G&#246;ring, Alexander Raake. <b>"The Frankenstone toolbox for video quality analysis of user-generated content." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
     
         &#160;<a href="./bibs/goering2024frankenstone.bib" target="_blank">[bib]</a>
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/frankenstone" target="_blank">[code]</a>
