--- a/publications.html
+++ b/publications.html
@@ -102,8 +102,8 @@
   <p class="bibentry">Steve G&#246;ring, Rasmus Merten, and Alexander Raake. <b>"Appeal prediction for AI up-scaled Images." </b><i>26th IEEE International Symposium on Multimedia (2024 IEEE ISM)</i>. Dec&#160;2024.
     
          pp.&#160;1-8.
-    to appear.
     
+        &#160;<a href="https://arxiv.org/abs/2502.14013">[url]</a>
         &#160;<a href="./bibs/goering2024aiupscaling.bib" target="_blank">[bib]</a>
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/ai_upscaling" target="_blank">[code]</a>
         &#160;<a href="pdfs/2024/2024_ism_ai_enhancement.pdf" target="_blank">[slides]</a></p>
