--- a/publications.html
+++ b/publications.html
@@ -127,6 +127,7 @@
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Alexander Raake. <b>"The Frankenstone toolbox for video quality analysis of user-generated content." </b><i>16th International Conference on Quality of Multimedia Experience (QoMEX)</i>. 2024.
     
+        &#160;<a href="https://doi.org/10.1109/QoMEX61742.2024.10598249">[url]</a>
         &#160;<a href="./bibs/goering2024frankenstone.bib" target="_blank">[bib]</a>
         &#160;<a href="https://github.com/Telecommunication-Telemedia-Assessment/frankenstone" target="_blank">[code]</a>
         &#160;<a href="./pdfs/2024/qomex2024_frankenstone_poster.pdf" target="_blank">[poster]</a></p>
