--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@
   <p class="bibentry">Steve G&#246;ring. <b>"CLIPSE -- a minimalistic CLIP-based image search engine for research." </b>2025.
     
         &#160;<a href="https://arxiv.org/abs/2504.17643">[url]</a>
-        &#160;<a href="./bibs/g&#xF6;ring2025clipseminimalisticclipbased.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/goering2025clipseminimalisticclipbased.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Steve G&#246;ring, Rasmus Merten, and Alexander Raake. <b>"Wie gut sind KI-basierte Algorithmen f&#252;r das Hochskalieren von Bildern? -- Analyse und Modelle zur Vorhersage." </b><i>FKTG Journal</i>. 02&#160;2025.
@@ -641,7 +641,7 @@
         &#160;<a href="./pdfs/2012/ba_slides.pdf" target="_blank">[slides]</a></p>
 </p>
 <h2 id="bib-year-0000">0000</h2><p  class="bibentries-one-year">
-  <p class="bibentry">Lukas Treybig, Florian Klein, Steve G&#246;ring, and Stephan Werner. <b>"Challenges of conducting a large-scale online perceptual study in the field of spatial audio." </b>
+  <p class="bibentry">Lukas Treybig, Florian Klein, Steve G&#246;ring, and Stephan Werner. <b>"Challenges of conducting a large-scale online perceptual study in the field of spatial audio." </b><i>Tagungsband-DAGA 2025: 51. Jahrestagung f&#252;r Akustik</i>. 
         &#160;<a href="./bibs/treybig2025.bib" target="_blank">[bib]</a></p>
 </p>
 </p>
