--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,7 @@
         &#160;<a href="./bibs/hartbrich2025hand.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
-  <p class="bibentry">William Menz, Jakob Hartbrich, Abhinav Battacharya, Rakesh Rao Ramachandra Rao, Thomas Robotham, Felix Immohr, Steve G&#246;ring, Emanu\"el A. P. Habets, and Alexander Raake. <b>"Influence of 4th-Order Ambisonics Audio on the Perceived Quality and Exploration Behavior of 360\textdegree&#160;Videos." </b><i>Metacom 2025</i>. 2025.
+  <p class="bibentry">William Menz, Abhinav Bhattacharya, Thomas Robotham, Felix Immohr, Rakesh Rao Ramachandra Rao, Steve G&#246;ring, Emanuel Habets, and Alexander Raake. <b>"Influence of 4th-Order Ambisonics Audio on the Perceived Quality and Exploration Behavior of 360\textdegree&#160;Videos." </b><i>Metacom 2025</i>. 2025.
     to appear.
     
         &#160;<a href="./bibs/menz2025ambi.bib" target="_blank">[bib]</a></p>
