add missing bib

--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
 <h2 id="bib-year-2025">2025</h2><p  class="bibentries-one-year">
   <p class="bibentry">Benjamin Herb, Rakesh Rao, Steve G&#246;ring, and Alexander Raake. <b>"Evaluating Video Quality Metrics for Neural and Traditional Codecs using 4K/UHD-1 Videos." </b><i>Picture Coding Symposium (PCS)</i>. 2025.
     
-        &#160;<a href="./bibs/herb2025-neural.bib" target="_blank">[bib]</a></p>
+        &#160;<a href="./bibs/herb2025neural.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
   <p class="bibentry">Lukas Treybig, Florian Klein, Stephan Werner, Sebastia V. Amengual Gari, and Steve G&#246;ring. <b>"Predicting the Perceptibility of Room Acoustic Variations Using Generalized Linear Mixed Models." </b><i>Journal of the Audio Engineering Society</i>. 2025.
