--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,7 @@
 <p  class="bibentries-one-year">
   <p class="bibentry">Benjamin Herb, Rakesh Rao, Steve G&#246;ring, and Alexander Raake. <b>"Evaluating Video Quality Metrics for Neural and Traditional Codecs using 4K/UHD-1 Videos." </b><i>Picture Coding Symposium (PCS)</i>. 2025.
     
+        &#160;<a href="https://arxiv.org/abs/2511.00969">[url]</a>
         &#160;<a href="./bibs/herb2025neural.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
