--- a/publications.html
+++ b/publications.html
@@ -119,6 +119,11 @@
         &#160;<a href="./bibs/treybig2025audio.bib" target="_blank">[bib]</a></p>
 </p>
 <p  class="bibentries-one-year">
+  <p class="bibentry">Stephan Fremerey, Steve G&#246;ring, Rakesh Rao, and Alexander Raake. <b>"Analysing how well 360&deg; Video Exploration Behaviour can be Measured with Screen versus HMD Viewing and in the Crowd." </b><i>IEEE Access</i>. 2025.
+    
+        &#160;<a href="./bibs/fremerey2025vrcrowd.bib" target="_blank">[bib]</a></p>
+</p>
+<p  class="bibentries-one-year">
   <p class="bibentry">Jakob Hartbrich, Stephanie Arevalo Arboleda, Steve G&#246;ring, and Alexander Raake. <b>"The Effect of Hand Visibility in AR: Comparing Dexterity and Interaction with Virtual and Real Objects." </b><i>ISMAR25</i>. 2025.
     to appear.
     
